# ncm-api-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  search_test.rs
src/: api.rs  crypto.rs  error.rs  lib.rs  request.rs
src/api/: song_detail.rs
src/server/: mod.rs  upload.rs
src/util/: config.rs  cookie.rs  device.rs  ip.rs  mod.rs
