[package]
name = "ncm-api"
version = "0.1.0"
edition = "2021"
description = "Netease Cloud Music API Rust SDK"
license = "WTFPL"
repository = "https://github.com/imsyy/ncm-api-rs"
homepage = "https://github.com/NeteaseCloudMusicApiEnhanced/api-enhanced"

[features]
default = []
server = ["axum", "tower", "tower-http", "tracing", "tracing-subscriber"]

[dependencies]
# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "socks"], default-features = false }
# Async
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
# Crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ecb = { version = "0.1", features = ["alloc"] }
md-5 = "0.10"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
# Utils
thiserror = "2"
urlencoding = "2"
chrono = "0.4"
regex-lite = "0.1"
# Server (optional)
axum = { version = "0.8", features = ["multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[[bin]]
name = "ncm-server"
path = "src/bin/server.rs"
required-features = ["server"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
